add dedicated install mirror to client install

--- a/06_optional_install_defaultclient.yaml
+++ b/06_optional_install_defaultclient.yaml
@@ -14,10 +14,6 @@
       when: repo_id is not defined 
 
     - set_fact: 
-        package_url: "{{ dedicated_mirror }}"
-      when: dedicated_mirror is defined 
-
-    - set_fact: 
         rpm_distribution_string: RHEL 
       when: ansible_distribution is regex('^RedHat*') 
 
@@ -31,37 +27,41 @@
 
     - name: Add Quobyte repository signing key
       apt_key:
-        url: https://packages.quobyte.com/repo/v3/apt/pubkey.gpg 
-        state: present
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-
-    - name: Add Quobyte apt repository to sources list
-      apt_repository:
-        repo: "deb {{ package_url }}/apt {{ ansible_distribution_release }} main"
+        url: "{{ dedicated_mirror | default(package_url) }}/apt/pubkey.gpg"
         state: present
       when: ansible_facts['os_family'] == "Debian"
 
-    - name: Add Quobyte rpm repository to sources list
+    - name: Add Quobyte apt repository to sources list
+      apt_repository:
+        repo: "deb {{ dedicated_mirror | default(package_url) }}/apt {{ ansible_distribution_release }} main"
+        state: present
+      when: ansible_facts['os_family'] == "Debian"
+
+    - name: Add Quobyte YUM repository to sources list
       yum_repository:
         name: quobyte
         description: Quobyte rpm repo
-        baseurl: "{{ package_url }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
-        gpgkey: https://packages.quobyte.com/repo/v3/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}/repodata/repomd.xml.key
+        baseurl: "{{ dedicated_mirror | default(package_url) }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
+        gpgkey: "{{ dedicated_mirror | default(package_url) }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}/repodata/repomd.xml.key"
+        gpgcheck: "{{ check_package_signature | default('yes', true) }}"
       when: ansible_facts['os_family'] == "RedHat"
 
     - name: Add Quobyte Zypper repository to sources list
       zypper_repository:
         name: quobyte
         description: Quobyte rpm repo
-        repo: "{{ package_url }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
+        repo: "{{ dedicated_mirror | default(package_url) }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
         auto_import_keys: yes
+        disable_gpg_check: "{{ check_packages_signature | default('no', false) }}"
       when: ansible_facts['os_family'] == "Suse"
+
 
     - name: Install Debian packages
       apt:
         name: "{{ packages }}"
         state: present
         update_cache: yes
+        allow_unauthenticated: "{{ check_packages_signature | default('no', false) }}"
       vars:
         packages:
         - quobyte-client
