--- a/01_setup_coreservices.yaml
+++ b/01_setup_coreservices.yaml
@@ -9,7 +9,7 @@
       lineinfile:
         path: /etc/quobyte/registry.cfg
         state: present
-        line: "rpc.service_networks={{ trusted_service_networks }}"
+        line: "rpc.service_networks={{ trusted_service_networks | join(',') }}"
       when: 'trusted_service_networks is defined and repo_id is defined'
 
     - name: Create registry data directory
