add rocky to repo detection

--- a/13_optional_add_nfsservices.yaml
+++ b/13_optional_add_nfsservices.yaml
@@ -16,6 +16,10 @@
         rpm_distribution_string: RHEL 
       when: ansible_distribution is regex('^RedHat*') 
 
+    - set_fact:
+        rpm_distribution_string: RockyLinux_8
+      when: ansible_distribution is regex('^Rocky*')
+
     - set_fact: 
         rpm_distribution_string: "{{ ansible_distribution }}"
       when: ansible_distribution is regex('^CentOS*') 
