--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -25,7 +25,7 @@
       when: ansible_distribution is regex('^RedHat*') 
 
     - set_fact:
-        rpm_distribution_string: RockyLinux_8
+        rpm_distribution_string: RockyLinux
       when: ansible_distribution is regex('^Rocky*')
 
     - set_fact: 
