--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -7,8 +7,12 @@
     # You can set explicit Quobyte versions here, for example to do a rollback
     #quobyte_version: =2:3.0~pre8.1
     #quobyte_version: =2:3.0~pre9-1
+    
+    # *.deb version schema
     #quobyte_version: =2:3.0~pre9.1-1
-    quobyte_version: "" 
+    
+    # *.rpm version schema:
+    quobyte_version: "-3.1-8.1" 
 
   tasks:
     
@@ -88,7 +92,7 @@
       vars:
         packages:
         - java-11-openjdk 
-        - quobyte-server
+        - quobyte-server{{ quobyte_version }}
         - xfsprogs
       when: ansible_facts['os_family'] == "RedHat" 
 
