--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -5,14 +5,12 @@
   become: yes
   vars: 
     # You can set explicit Quobyte versions here, for example to do a rollback
-    #quobyte_version: =2:3.0~pre8.1
-    #quobyte_version: =2:3.0~pre9-1
     
     # *.deb version schema
-    #quobyte_version: =2:3.0~pre9.1-1
+    ## quobyte_version: =2:3.0~pre9.1-1
     
     # *.rpm version schema:
-    quobyte_version: "-3.1-8.1" 
+    ## quobyte_version: "-3.1-8.1" 
 
   tasks:
     
