--- a/04_add_dataservices.yaml
+++ b/04_add_dataservices.yaml
@@ -52,7 +52,7 @@
 
     - name: Wait for tasks to finish before proceeding 
       shell: 
-        cmd: qmgmt -u {{ api_service }} task list RUNNING -o json 
+        cmd: qmgmt -u {{ api_service }} task list RUNNING,SCHEDULED,QUEUED -o json 
       register: result
       until: result.stdout.find("MAKE_DEVICE") < 1
       ##retries: 5
