--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -58,7 +58,7 @@
 
     - name: Add Quobyte Debian repository to sources list
       deb822_repository:
-        name: example
+        name: quobyte 
         types: deb
         uris: https://packages.quobyte.com/repo/v3/apt
         suites: '{{ ansible_distribution_release }}'
