Also consider S3 services when starting, stopping or restarting

--- a/helper/16_restart_unconditional.yaml
+++ b/helper/16_restart_unconditional.yaml
@@ -43,3 +43,12 @@
         state: restarted
         name: quobyte-data
 
+- hosts: s3services 
+  become: yes
+  serial: 1
+  tasks:
+    - name: Restart Quobyte dataservices 
+      service:
+        state: restarted
+        name: quobyte-s3
+
