Make metadata device creation more resilient

--- a/03_add_metadataservices.yaml
+++ b/03_add_metadataservices.yaml
@@ -34,7 +34,8 @@
     - name: Label metadata device with "quobyte-dev" 
       command:
         cmd: xfs_admin -L quobyte-dev /dev/{{ item }} 
-        creates: /var/lib/quobyte/mnt/inspector-{{ item }}/QUOBYTE_DEV_SETUP
+          ##creates: /var/lib/quobyte/mnt/inspector-{{ item }}/QUOBYTE_DEV_SETUP
+        creates: /var/lib/quobyte/mnt/inspector-{{ item }}
       with_items: "{{ metadatadevices }}"
 
     - name: Make sure device labels are up to date 
