--- a/07_optional_license_cluster.yaml
+++ b/07_optional_license_cluster.yaml
@@ -31,6 +31,16 @@
       service:
         state: restarted
         name: quobyte-registry 
+    - name: Wait for Registry RPC port to become available 
+      wait_for:
+        port: 7861
+        delay: 2
+    - name: Wait for Registry metrics port to become available 
+      wait_for:
+        port: 7871
+        delay: 2
+
+
 
 - hosts: apiservices 
   become: yes
@@ -40,6 +50,15 @@
       service:
         state: restarted
         name: quobyte-api 
+    - name: Wait for API RPC port to become available 
+      wait_for:
+        port: 7865 
+        delay: 2
+    - name: Wait for API metrics port to become available 
+      wait_for:
+        port: 7875 
+        delay: 2
+
 
 - hosts: webconsoleservices 
   become: yes
