--- a/03_add_metadataservices.yaml
+++ b/03_add_metadataservices.yaml
@@ -2,13 +2,6 @@
   become: yes
   tasks:
 
-    - name: Check for trusted service networks
-      lineinfile:
-        path: /etc/quobyte/metadata.cfg
-        state: present
-        line: "rpc.service_networks={{ trusted_service_networks }}"
-      when: 'trusted_service_networks is defined'
-
     - name: Enable Quobyte metadata service
       service:
         enabled: yes
@@ -58,13 +51,11 @@
       # https://github.com/ansible/ansible/issues/79683
       when: ansible_version.full < "2.16.1" and ansible_version.full > "2.13.7"
 
-
     - name: Run qmkdev to create metadata device 
       command:
         cmd: /usr/bin/qmkdev -t METADATA /var/lib/quobyte/mnt/inspector-{{ item }}
         creates: /var/lib/quobyte/mnt/inspector-{{ item }}/QUOBYTE_DEV_SETUP
       with_items: "{{ metadatadevices }}"
-
 
 - hosts: registryservices[0]
   vars_files:
@@ -80,7 +71,7 @@
 
     - name: Wait for all {{ metadata_device_count }} metadata devices to become available
       shell: 
-        cmd: qmgmt -u {{ api_service }} device list METADATA | grep ONLINE | wc -l
+        cmd: qmgmt -u {{ api_service }} device list M | grep ONLINE | wc -l
       register: metadata_device_state
       retries: 12
       delay: 10
