For idempotency check on errors must be allowed on the quobyte client mount location

--- a/06_optional_install_defaultclient.yaml
+++ b/06_optional_install_defaultclient.yaml
@@ -101,6 +101,7 @@
         dest: "/etc/quobyte/client-service.cfg"
 
     - name: Create client mount point /quobyte 
+      ignore_errors: yes
       file:
         path: /quobyte
         state: directory
